--- a/views/add-product.html
+++ b/views/add-product.html
@@ -12,13 +12,13 @@
     <nav>
       <ul>
         <li><a href="/">Shop</a></li>
-        <li><a href="/add-product">Add product</a></li>
+        <li><a href="/admin/add-product">Add product</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <form action="/add-product" method="POST">
+    <form action="/admin/add-product" method="POST">
       <input type="text" name="title">
       <button type="submit">Add</button>
     </form>
