--- a/views/shop.pug
+++ b/views/shop.pug
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title Document
-    link(rel="stylesheet", href="/css/main.css")
-  body
-    header.top-bar
-            nav
-              ul.menu
-                li
-                  a.active(href="/") Shop
-                li
-                  a(href="/admin/add-product") Add product
-    
-    div.grid-container
-      div.grid-x.grid-padding-x
-        main.cell.small-12
-          h1 Products page
-          p List of products
+extends layouts/default.pug
+
+block content
+  .cell.small-12
+    h2.margin-bottom-2 #{pageTitle}
+
+    if products.length > 0
+      .grid-x.grid-padding-x.small-up-2.medium-up-4
+        each product in products
+          .cell
+            .card.shadow
+              .card-divider
+                h4 #{product.title}
+              img(src="https://get.foundation/sites/docs/assets/img/generic/rectangle-1.jpg" alt="product")
+              .card-section.text-center
+                p
+                  strong $ 300,00
+                p
+                  small Product description
+                p
+                  a.button.expanded(href="#") Buy
+    else
+      h5
+        i No products...
