--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -14,6 +14,10 @@ html(lang="en")
           li
             a(href="/", class=(path==="/" ? "active" : '')) Shopp
           li
+            a(href="/products", class=(path==="/products" ? "active" : '')) Products
+          li
+            a(href="/cart", class=(path==="/cart" ? "active" : '')) Cart
+          li  
             a(href="/admin/add-product", class=(path==="/admin/add-product" ? "active" : '')) Add product
 
     main.grid-container
