--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -14,11 +14,13 @@ html(lang="en")
           li
             a(href="/", class=(path==="/" ? "active" : '')) Shopp
           li
-            a(href="/products", class=(path==="/products" ? "active" : '')) Products
+            a(href="/products", class=(path==="/shop/products" ? "active" : '')) Products
           li
             a(href="/cart", class=(path==="/cart" ? "active" : '')) Cart
           li  
             a(href="/admin/add-product", class=(path==="/admin/add-product" ? "active" : '')) Add product
+          li  
+            a(href="/admin/products", class=(path==="/admin/products" ? "active" : '')) Admin products
 
     main.grid-container
       .grid-x.grid-padding-x
