--- a/views/admin/add-product.pug
+++ b/views/admin/add-product.pug
@@ -8,4 +8,10 @@ block content
       p
         input(type="text" name="title" placeholder="Product name", required)
       p
+        input(type="text" name="imageUrl" placeholder="Image URL", required)
+      p
+        input(type="number" name="price" placeholder="Price", step="0.0", required)
+      p
+        textarea(name="description", rows="10", placeholder="Description" required)
+      p
         button.button(type="submit") ADD
