--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -16,7 +16,9 @@ html(lang="en")
           li
             a(href="/products", class=(path==="/shop/products" ? "active" : '')) Products
           li
-            a(href="/cart", class=(path==="/cart" ? "active" : '')) Cart
+            a(href="/cart", class=(path==="/shop/cart" ? "active" : '')) Cart
+          li  
+            a(href="/orders", class=(path==="/shop/orders" ? "active" : '')) Orders
           li  
             a(href="/admin/add-product", class=(path==="/admin/add-product" ? "active" : '')) Add product
           li  
