--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -11,12 +11,12 @@ block content
             .card.shadow
               .card-divider
                 h4 #{product.title}
-              img(src="https://get.foundation/sites/docs/assets/img/generic/rectangle-1.jpg" alt="product")
+              img(src=product.imageUrl alt="product")
               .card-section.text-center
                 p
-                  strong $ 300,00
+                  strong $#{product.price}
                 p
-                  small Product description
+                  small #{product.description}
                 p
                   a.button.expanded(href="#") Buy
     else
