--- a/views/layouts/default.pug
+++ b/views/layouts/default.pug
@@ -14,11 +14,11 @@ html(lang="en")
           li
             a(href="/", class=(path==="/" ? "active" : '')) Shopp
           li
-            a(href="/products", class=(path==="/shop/products" ? "active" : '')) Products
+            a(href="/products", class=(path==="/products" ? "active" : '')) Products
           li
-            a(href="/cart", class=(path==="/shop/cart" ? "active" : '')) Cart
+            a(href="/cart", class=(path==="/cart" ? "active" : '')) Cart
           li  
-            a(href="/orders", class=(path==="/shop/orders" ? "active" : '')) Orders
+            a(href="/orders", class=(path==="/orders" ? "active" : '')) Orders
           li  
             a(href="/admin/add-product", class=(path==="/admin/add-product" ? "active" : '')) Add product
           li  
