--- a/views/shop/index.pug
+++ b/views/shop/index.pug
@@ -10,7 +10,8 @@ block content
           .cell
             .card.shadow
               .card-divider
-                h4 #{product.title}
+                h4 
+                  a(href=`/products/${product.id}`) #{product.title}
               img(src=product.imageUrl alt="product")
               .card-section.text-center
                 p
@@ -18,7 +19,7 @@ block content
                 p
                   small #{product.description}
                 p
-                  a.button.expanded(href="#") Buy
+                  include ../partials/add-to-cart.pug
     else
       h5
         i No products...
