--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -5,24 +5,42 @@ block content
     h2.margin-bottom-2 #{pageTitle}
 
     if cartProducts
-      .grid-x.grid-padding-x.small-up-2.medium-up-4
+      .grid-x.grid-padding-x
         each product in cartProducts
-          .cell
-            .card.shadow
-              .card-divider
-                h4 #{product.productData.title}
-              img(src=product.productData.imageUrl alt="product")
-              .card-section.text-center
-                p
-                  strong $#{product.productData.price}
-                p
-                  small #{product.productData.description}
-                p
-                  a.button.float-left(href=`/admin/edit-product/${product.productData.id}?edit=true`) Edit
-                p
-                  form.float-right(action="/admin/delete-product" method="POST")
-                    input(type="hidden" name="productId" value=product.productData.id)
-                    button.button.alert(type="submit") Delete
+          .cell.small-12
+            .grid-x.grid-padding-x.small-up-1.medium-up-3.align-center
+              .cell
+                table.hover.sriped.stack
+                  thead
+                    td Product name
+                    td Quantity
+                    td
+                  tbody
+                    tr
+                      td 
+                        a(href=`/products/${product.productData.id}`) #{product.productData.title}
+                      td #{product.qty}
+                      td
+                        form(action="/cart-delete-item" method="POST")
+                          input(type="hidden" name="productID" value=product.productData.id)
+                          button.alert.button(type="submit") Delete
+
+
+            //- .card.shadow
+            //-   .card-divider
+            //-     h4 #{product.productData.title}
+            //-   img(src=product.productData.imageUrl alt="product")
+            //-   .card-section.text-center
+            //-     p
+            //-       strong $#{product.productData.price}
+            //-     p
+            //-       small #{product.productData.description}
+            //-     p
+            //-       a.button.float-left(href=`/admin/edit-product/${product.productData.id}?edit=true`) Edit
+            //-     p
+            //-       form.float-right(action="/admin/delete-product" method="POST")
+            //-         input(type="hidden" name="productId" value=product.productData.id)
+            //-         button.button.alert(type="submit") Delete
                     
     else
       h5
